# tiny_ssl_vpn

./: .gitignore  CMakeLists.txt  README.md
client/: main.cpp
server/: main.cpp
utils/: ca.cpp  crypto.hpp  enctun.hpp  message.proto  tun.hpp
